# hackathon-task-02

./: Contract_inspect.txt  README.md  abd761fd-4825-45be-af12-9479acf5891b  params.json
my-project/: Cargo.toml  my-project.wasm.v1
my-project/src/: lib.rs
